# LAM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  search_agent.py  tree_output.txt
config/: allowlist_apps.yaml  allowlist_domains.yaml  control_plane.yaml  human_operator_scenarios.json  policy.yaml  sensitive_actions.yaml
docs/: CLI_GUIDE.md  COMMERCIAL_FEATURES.md  COMMERCIAL_READINESS_CHECKLIST.md  CONTROL_PLANE_API.md  EXAMPLES.md  GETTING_STARTED.md  HUMAN_OPERATOR_CONTRACT.md  IMPLEMENTATION_BLUEPRINT.md  IMPLEMENTATION_PHASES.md  MULTIMODAL_VIDEO_LEARNING_SETUP_GUIDE.md  OPERATOR_PLATFORM_ARCHITECTURE.md  OPS_RUNBOOK.md  PAYER_RAG.md  README.md  TEACH_MODE_GUIDE.md  TESTING_VALIDATION.md  TOPIC_MASTERY_GUIDE.md  TROUBLESHOOTING.md  UI_GUIDE.md  USABILITY_GUIDE.md
docs/assets/: README.md
lam/: __init__.py  main.py
lam/adapters/: __init__.py  excel_adapter.py  playwright_adapter.py  selenium_adapter.py  uia_adapter.py
lam/deep_workbench/: __init__.py  workflow.py
lam/dsl/: __init__.py  parser.py  schema.py  validator.py  workflow_schema.yaml
lam/endpoint_agent/: __init__.py  kill_switch.py  pause_resume.py  runner.py  teach_capture.py
lam/governance/: __init__.py  approval_client.py  audit_logger.py  authn.py  identity_context.py  policy_engine.py  redaction.py  secrets_manager.py
lam/interface/: __init__.py  ai_backend.py  app_launcher.py  app_learner.py  browser_worker.py  clipboard_capture.py  contract_schema_validation.py  dpapi.py  (+20 more)
workflows/: claims_excel_to_thickclient_submit.yaml  claims_excel_to_web_submit.yaml
(+129 files in other folders)
