[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lam-governance-mvp"
version = "0.1.0"
description = "Governance-first LAM platform scaffold for healthcare Windows endpoints"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
lamctl = "lam.main:main"

[tool.setuptools.packages.find]
where = ["."]
